# Machine-Learning-Operations-02476-

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: code_check.yaml  linting.yaml  pre-commit-update.yaml  tests.yaml
Git_Folder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
S_1/s1_development_environment/: README.md  command_line.md  deep_learning_software.md  editor.md  package_manager.md
S_1/s1_development_environment/exercise_files/: 2_Neural_Networks_in_PyTorch.ipynb  4_Fashion_MNIST.ipynb  5_Inference_and_Validation.ipynb  6_Saving_and_Loading_Models.ipynb  checkpoint.pth  fc_model.py  helper.py
S_10/s10_extra/: README.md  design.md  documentation.md  high_performance_clusters.md  hyperparameters.md  infrastructure_as_code.md  orchestration.md  quantization.md
S_10/s10_extra/exercise_files/: fashion_trainer.py  (+3 more)
S_2/Mini Project/: LICENSE  pyproject.toml  tasks.py
S_2/mini_project/: README.md
S_2/s2_organisation_and_version_control/: README.md  cli.md  code_structure.md  dvc.md  git.md  good_coding_practice.md
S_3/s3_reproducibility/: README.md  config_files.md  docker.md
S_4/s4_debugging_and_logging/: README.md  boilerplate.md  debugging.md  logging.md  profiling.md
S_5/s5_continuous_integration/: README.md  cml.md  github_actions.md  pre_commit.md  unittesting.md
S_6/s6_the_cloud/: README.md  cloud_setup.md  using_the_cloud.md
S_7/s7_deployment/: README.md  apis.md  cloud_deployment.md  frontend.md  ml_deployment.md  testing_apis.md
S_8/s8_monitoring/: README.md  data_drifting.md  monitoring.md  sentiment_api_prometheus.dockerfile
S_9/s9_scalable_applications/: README.md  data_loading.md  distributed_training.md  inference.md
(+102 files in other folders)
