[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Git_Folder"
version = "0.0.1"
description = "This is sued for the env for the git folder"
authors = [
  { name = "mattiashuen", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "datetime>=6.0",
    "fastapi==0.115.6",
    "hydra-core>=1.3.2",
    "invoke>=2.2.0",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "omegaconf>=2.3.0",
    "pytest>=8.3.4",
    "pytorch-lightning>=2.6.0",
    "scikit-learn>=1.8.0",
    "snakeviz>=2.2.2",
    "tensorflow>=2.20.0",
    "torch==2.6.0",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.21.0",
    "typer==0.16.0",
    "uvicorn==0.34.0",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "my_project.train:train"
eval = "my_project.evaluate:evaluate"

[tool.setuptools.packages.find]
include = ["MLOPS*"]
exclude = ["S_*"]
